tests/ui/feature-gates/feature-gate-asm_interpolate.stderr
error[E0658]: using the ASM `interpolate` operator is experimental
  --> $DIR/feature-gate-asm_interpolate.rs:5:38
   |
LL |         std::arch::asm!("/* {0} */", interpolate "test");
   |                                      ^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #157043 <https://github.com/rust-lang/rust/issues/157043> for more information
   = help: add `#![feature(asm_interpolate)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
